# OwlPlay

./: IVideoCall.h  OwlAudioPlay.cpp  OwlAudioPlay.h  OwlAudioThread.cpp  OwlAudioThread.h  OwlDecode.cpp  OwlDecode.h  OwlDecodeThread.cpp  OwlDecodeThread.h  OwlDemux.cpp  OwlDemux.h  OwlDemuxThread.cpp  OwlDemuxThread.h  OwlPlay.cpp  OwlPlay.h  OwlPlay.pri  OwlPlay.pro  OwlPlay.qrc  OwlPlay.ui  OwlPlay.vcxproj  OwlPlay.vcxproj.filters  OwlResample.cpp  OwlResample.h  OwlSlider.cpp  OwlSlider.h  OwlVideoThread.cpp  OwlVideoThread.h  OwlVideoWidget.cpp  OwlVideoWidget.h  README.md  main.cpp
include/libavutil/: ffversion.h
lib/: avformat.lib  avutil.lib  postproc.lib
linux64/: README.md
linux64/OwlPlay/: CMakeLists.txt  IVideoCall.h  OwlAudioPlay.cpp  OwlAudioPlay.h  OwlAudioThread.cpp  OwlAudioThread.h  OwlDecode.cpp  OwlDecode.h  OwlDecodeThread.cpp  OwlDecodeThread.h  OwlDemux.cpp  OwlDemux.h  OwlDemuxThread.cpp  OwlDemuxThread.h  OwlPlay.cpp  OwlPlay.h  OwlPlay.qrc  OwlPlay.ui  OwlResample.cpp  OwlResample.h  OwlSlider.cpp  OwlSlider.h  OwlVideoThread.cpp  OwlVideoThread.h  OwlVideoWidget.cpp  OwlVideoWidget.h  main.cpp
src/: OwlDecodeThread.h  OwlDemux.h  OwlPlay.h  OwlPlay.sln  OwlPlay.vcxproj  main.cpp
win64/: README.md
win64/include/libavcodec/: avcodec.h
win64/lib/: avcodec.lib  avdevice.lib  avfilter.lib  swresample.lib  swscale.lib
win64/src/: OwlAudioPlay.h  OwlDemuxThread.h  OwlPlay.pro  OwlResample.cpp  OwlVideoThread.cpp  OwlVideoWidget.cpp
